refactor(desugarer): move desugarer to be query based

--- a/elara.cabal
+++ b/elara.cabal
@@ -61,6 +61,7 @@ library
       Elara.Data.Unique
       Elara.Data.Unwrap
       Elara.Desugar
+      Elara.Desugar.Error
       Elara.Emit
       Elara.Emit.Utils
       Elara.Error
