refactor(shunter): Refactor shunter and significantly clean up other code

--- a/elara.cabal
+++ b/elara.cabal
@@ -103,6 +103,8 @@ library
       Elara.Rules
       Elara.Settings
       Elara.Shunt
+      Elara.Shunt.Error
+      Elara.Shunt.Operator
       Elara.ToCore
       Elara.ToCore.Match
       Elara.TypeInfer
