--- a/elara.cabal
+++ b/elara.cabal
@@ -102,6 +102,8 @@ library
       Elara.Rename.Error
       Elara.Rename.Imports
       Elara.Rules
+      Elara.SCC
+      Elara.SCC.Type
       Elara.Settings
       Elara.Shunt
       Elara.Shunt.Error
