refactor(tests): Re-enable all tests, refactoring code where necessary

--- a/elara.cabal
+++ b/elara.cabal
@@ -18,6 +18,7 @@ build-type:     Simple
 
 library
   exposed-modules:
+      Effectful.Error.Extra
       Effectful.State.Extra
       Elara.AST.Desugared
       Elara.AST.Frontend
