test: add a basic golden test

--- a/elara.cabal
+++ b/elara.cabal
@@ -347,6 +347,7 @@ test-suite elara-test
     , process
     , relude
     , safe-exceptions
+    , silently
     , some
     , stringsearch
     , sydtest
