--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           name: elara
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-      - run: nix develop --command bash -c "cabal haddock-project --hackage"
+      - run: nix develop --command bash -c "cabal update && cabal haddock-project --hackage"
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
