feat(parser): start work parsing annotations

--- a/elara.cabal
+++ b/elara.cabal
@@ -78,6 +78,7 @@ library
       Elara.Lexer.Utils
       Elara.Logging
       Elara.Parse
+      Elara.Parse.Annotation
       Elara.Parse.Combinators
       Elara.Parse.Debug
       Elara.Parse.Declaration
@@ -163,7 +164,6 @@ library
     , effectful-plugin
     , effectful-th
     , filepath
-    , generic-deriving
     , generic-optics
     , h2jvm
     , hashable
@@ -226,7 +226,6 @@ executable elara
     , effectful-th
     , elara
     , filepath
-    , generic-deriving
     , generic-optics
     , h2jvm
     , hashable
@@ -315,7 +314,6 @@ test-suite elara-test
     , effectful-th
     , elara
     , filepath
-    , generic-deriving
     , generic-optics
     , h2jvm
     , hashable
