stash emitter changes

--- a/elara.cabal
+++ b/elara.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.0
 
--- This file has been generated from package.yaml by hpack version 0.38.1.
+-- This file has been generated from package.yaml by hpack version 0.38.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -67,6 +67,7 @@ library
       Elara.Desugar
       Elara.Desugar.Error
       Elara.Emit
+      Elara.Emit.Lambda
       Elara.Emit.Utils
       Elara.Error
       Elara.Error.Codes
