--- a/.stan.toml
+++ b/.stan.toml
@@ -2,5 +2,6 @@ check = [
   {type = "Exclude", id = "STAN-0213", scope = "all"},
   {type = "Exclude", id = "STAN-0103", scope = "all"},
   {type = "Exclude", id = "STAN-0101", scope = "all"},
-  {type = "Exclude", id = "STAN-0206", scope = "all"}
+  {type = "Exclude", id = "STAN-0206", scope = "all"},
+  {type = "Exclude", id = "STAN-0302", scope = "all"} # this also gets applied to constraint synonyms making it useless
 ]
